rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_case_entrypoint.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__created_at_month|sales__rolling_amount
books|2024-04-01 00:00:00|900.0000000000
books|2024-05-01 00:00:00|1202.0000000000
books|2024-06-01 00:00:00|1502.0000000000
toys|2024-04-01 00:00:00|90.0000000000
toys|2024-05-01 00:00:00|121.0000000000
toys|2024-06-01 00:00:00|151.0000000000
