rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_case_entrypoint_r12.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__created_at_month|sales__rolling_amount
books|2024-04-01 00:00:00|1087.0000000000
books|2024-05-01 00:00:00|1559.0000000000
books|2024-06-01 00:00:00|2159.0000000000
toys|2024-04-01 00:00:00|111.0000000000
toys|2024-05-01 00:00:00|159.0000000000
toys|2024-06-01 00:00:00|219.0000000000
