rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_date_range_only.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__rolling_amount
books|1502.0000000000
toys|151.0000000000
