rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_derived_entrypoint.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__created_at_month|sales__rolling_amount_change
books|2024-04-01 00:00:00|743.0000000000
books|2024-05-01 00:00:00|852.0000000000
books|2024-06-01 00:00:00|902.0000000000
toys|2024-04-01 00:00:00|72.0000000000
toys|2024-05-01 00:00:00|86.0000000000
toys|2024-06-01 00:00:00|91.0000000000
