rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_four_measures.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__created_at_month|sales__rolling_amount|sales__prev_rolling_amount|sales__rolling_amount_change|sales__rolling_amount_growth
books|2024-04-01 00:00:00|900.0000000000|157.0000000000|743.0000000000|4.7324840764
books|2024-05-01 00:00:00|1202.0000000000|350.0000000000|852.0000000000|2.4342857143
books|2024-06-01 00:00:00|1502.0000000000|600.0000000000|902.0000000000|1.5033333333
toys|2024-04-01 00:00:00|90.0000000000|18.0000000000|72.0000000000|4.0000000000
toys|2024-05-01 00:00:00|121.0000000000|35.0000000000|86.0000000000|2.4571428571
toys|2024-06-01 00:00:00|151.0000000000|60.0000000000|91.0000000000|1.5166666667
