rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_growth_else_branch.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: normalize(result)
---
sales__category|sales__created_at_month|sales__rolling_amount_growth
books|2024-04-01 00:00:00|49.0000000000
books|2024-05-01 00:00:00|29.0400000000
books|2024-06-01 00:00:00|41.0400000000
toys|2024-04-01 00:00:00|49.0000000000
toys|2024-05-01 00:00:00|29.2000000000
toys|2024-06-01 00:00:00|41.2000000000
