rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/snapshots/cubesqlplanner__tests__integration__cubestore__switch_rolling__switch_rolling_joined_dimension.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/cubestore/switch_rolling.rs
expression: result
---
accounts__name | sales__created_at_month  | sales__rolling_amount
---------------+--------------------------+----------------------
acme           | 2024-04-01T00:00:00.000Z | 900                  
acme           | 2024-05-01T00:00:00.000Z | 1200                 
acme           | 2024-06-01T00:00:00.000Z | 1500                 
globex         | 2024-04-01T00:00:00.000Z | 90                   
globex         | 2024-05-01T00:00:00.000Z | 120                  
globex         | 2024-06-01T00:00:00.000Z | 150
